Поля tel и email

--- a/source/form.html
+++ b/source/form.html
@@ -135,11 +135,11 @@
               <ul class="form__list">
                 <li class="form__item">
                   <label class="form__label form__label--contacts" for="user-telephone">Тел</label>
-                  <input class="form__input" type="text" id="user-telephone" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+                  <input class="form__input" type="tel" id="user-telephone" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
                 </li>
                 <li class="form__item">
                   <label class="form__label form__label--contacts" for="user-email">E-mail</label>
-                  <input class="form__input" type="text" id="user-email" name="user-email" placeholder="Ваш Email*">
+                  <input class="form__input" type="email" id="user-email" name="user-email" placeholder="Ваш Email*">
                 </li>
                 <li class="form__item">
                   <label class="form__label form__label--contacts" for="user-text">Доп</label>
