--- a/source/form.html
+++ b/source/form.html
@@ -132,6 +132,9 @@
               </ul>
             </fieldset>
             <fieldset class="form__fieldset form__fieldset--contacts">
+              <legend class="form__legend visually-hidden">
+                Контакты
+              </legend>
               <ul class="form__list">
                 <li class="form__item">
                   <label class="form__label form__label--contacts" for="user-telephone">Тел</label>
@@ -141,11 +144,14 @@
                   <label class="form__label form__label--contacts" for="user-email">E-mail</label>
                   <input class="form__input" type="email" id="user-email" name="user-email" placeholder="Ваш Email*">
                 </li>
-                <li class="form__item">
-                  <label class="form__label form__label--contacts" for="user-text">Доп</label>
-                  <textarea class="form__textarea" id="user-text" name="more-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-                </li>
               </ul>
+            </fieldset>
+            <fieldset class="form__fieldset form__fieldset--more">
+              <legend class="form__legend visually-hidden">
+                Ваши дополнения
+              </legend>
+              <label class="form__label form__label--contacts" for="user-text">Доп</label>
+              <textarea class="form__textarea" id="user-text" name="more-info" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </fieldset>
             <p class="form__note">
               *Поля обязательны для заполнения
