--- a/source/catalog.html
+++ b/source/catalog.html
@@ -59,39 +59,54 @@
         <div class="catalog__wrapper">
           <ul class="catalog__list">
             <li class="product">
-              <img class="product__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Зайчик-попрыгайчик">
+              <a class="product__link-image" href="#">
+                <img class="product__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Зайчик-попрыгайчик">
+              </a>
               <div class="product__container">
-                <a class="product__link" href="#">
+                <a class="product__link-title" href="#">
                   <h3 class="product__title">
                     Зайчик-попрыгайчик
                   </h3>
                 </a>
                 <p class="product__description">Рост 30 см, вес 200 г</p>
-                <p class="product__price">1 200 руб.</p>
+                <div class="product__container-price">
+                  <p class="product__price">1 200 руб.</p>
+                  <a class="product__button" href="#"></a>
+                </div>
               </div>
             </li>
             <li class="product">
-              <img class="product__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Корзинка для белья">
+              <a class="product__link-image" href="#">
+                <img class="product__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Корзинка для белья">
+              </a>
               <div class="product__container">
-                <a class="product__link" href="#">
+                <a class="product__link-title" href="#">
                   <h3 class="product__title">
                     Корзинка для белья
                   </h3>
                 </a>
                 <p class="product__description">Диаметр 15 см, высота 10 см</p>
-                <p class="product__price">690 руб.</p>
+                <div class="product__container-price">
+                  <p class="product__price">690 руб.</p>
+                  <a class="product__button" href="#"></a>
+                </div>
               </div>
             </li>
             <li class="product">
-              <img class="product__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Большая корзинка для игрушек">
+              <a class="product__link-image" href="#">
+                <img class="product__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Большая корзинка для игрушек">
+              </a>
               <div class="product__container">
-                <a class="product__link" href="#">
+                <a class="product__link-title" href="#">
                   <h3 class="product__title">
                     Большая корзинка для игрушек
                   </h3>
                 </a>
                 <p class="product__description">Диаметр 30 см, высота 30 см</p>
-                <p class="product__price">1 500 руб.</p>
+                <div class="product__container-price">
+                  <p class="product__price">1 500 руб.</p>
+                  <a class="product__button" href="#"></a>
+                </div>
               </div>
             </li>
           </ul>
