--- a/source/catalog.html
+++ b/source/catalog.html
@@ -71,7 +71,7 @@
                 <p class="product__description">Рост 30 см, вес 200 г</p>
                 <div class="product__container-price">
                   <p class="product__price">1 200 руб.</p>
-                  <a class="product__button" href="#"></a>
+                  <button class="product__button" type="button"></button>
                 </div>
               </div>
             </li>
@@ -88,7 +88,7 @@
                 <p class="product__description">Диаметр 15 см, высота 10 см</p>
                 <div class="product__container-price">
                   <p class="product__price">690 руб.</p>
-                  <a class="product__button" href="#"></a>
+                  <button class="product__button" type="button"></button>
                 </div>
               </div>
             </li>
@@ -105,7 +105,7 @@
                 <p class="product__description">Диаметр 30 см, высота 30 см</p>
                 <div class="product__container-price">
                   <p class="product__price">1 500 руб.</p>
-                  <a class="product__button" href="#"></a>
+                  <button class="product__button" type="button"></button>
                 </div>
               </div>
             </li>
