--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -57,9 +58,9 @@
       <section class="slogan-form">
         <h2 class="visually-hidden">Слоган</h2>
         <div class="slogan-form__wrapper">
-         <p class="slogan-form__text">
-           Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
-         </p>
+          <p class="slogan-form__text">
+            Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
+          </p>
         </div>
       </section>
       <section class="main-form">
