--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -53,7 +54,7 @@
       <section class="slogan">
         <div class="slogan__wrapper">
           <h2 class="slogan__title">
-            Милые штуки ручной работы для дома
+            Милые штуки<br> ручной<br> работы для дома
           </h2>
         </div>
       </section>
@@ -78,34 +79,39 @@
         <div class="product__wrapper">
           <h2 class="product__title">Товар недели</h2>
           <h3 class="product__name heading-secondary">Вязаные корзинки</h3>
-          <dl class="product__list">
-            <div class="product__item">
-              <dt class="product__number">
-                Цвет:
-              </dt>
-              <dd class="product__description">
-                «Тиффани»/серый
-              </dd>
-            </div>
-            <div class="product__item">
-              <dt class="product__number">
-                Диаметр:
-              </dt>
-              <dd class="product__description">
-                25 см
-              </dd>
-            </div>
-            <div class="product__item">
-              <dt class="product__number">
-                Высота:
-              </dt>
-              <dd class="product__description">
-                15 см
-              </dd>
-            </div>
-          </dl>
+          <div class="product__container">
+            <p class="product__text">
+              Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
+            </p>
+            <dl class="product__list">
+              <div class="product__item">
+                <dt class="product__number">
+                  Цвет:
+                </dt>
+                <dd class="product__description">
+                  «Тиффани»/серый
+                </dd>
+              </div>
+              <div class="product__item">
+                <dt class="product__number">
+                  Диаметр:
+                </dt>
+                <dd class="product__description">
+                  25 см
+                </dd>
+              </div>
+              <div class="product__item">
+                <dt class="product__number">
+                  Высота:
+                </dt>
+                <dd class="product__description">
+                  15 см
+                </dd>
+              </div>
+            </dl>
+          </div>
           <img src="https://via.placeholder.com/260x315" width="260" height="315" alt="Вязаные корзинки">
-          <p class="">
+          <p class="product__price">
             Цена: 990 руб.
           </p>
           <a class="product__button button" href="#">Заказать</a>
@@ -171,7 +177,7 @@
             <button class="reviews__button reviews__button--left" type="button">предыдущий отзыв</button>
             <button class="reviews__button reviews__button--right" type="button">следующий отзыв</button>
           </div>
-          <a class="reviews__button button" href="#">
+          <a class="reviews__button-write button" href="#">
             Написать
           </a>
         </div>
@@ -186,7 +192,7 @@
               <p class="contacts__text address-text">
                 e-mail:
               </p>
-              <a class="contacts__address address-text" href="mailto:info@mimimishkashop.ru">
+              <a class="contacts__email address-text" href="mailto:info@mimimishkashop.ru">
                 info@mimimishkashop.ru
               </a>
             </div>
@@ -194,9 +200,9 @@
               <p class="contacts__text address-text">
                 адрес:
               </p>
-              <a class="contacts__address address-text" href="mailto:info@mimimishkashop.ru">
+              <p class="contacts__address address-text">
                 г. Санкт-Петербург<br> ул. Большая Конюшенная<br> д. 19/8, офис 101
-              </a>
+              </p>
             </div>
           </address>
           <div class="contacts__map">
@@ -212,7 +218,7 @@
       <div class="page-footer__wrapper">
         <img class="logo-footer visually-hidden" src="https://via.placeholder.com/102x34" width="102" height="34">
         <div class="page-footer__social social">
-          <b class="social__title">Давайте дружить!</b>
+          <b class="social__title visually-hidden">Давайте дружить!</b>
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
