Стилизация страницы формы

--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
           </ul>
         </div>
       </nav>
-      <p class="page-header__slogan">
+      <p class="page-header__slogan visually-hidden">
         Бесплатная доставка по России
       </p>
     </header>
