Ссылка на форму и кнопка

--- a/source/form.html
+++ b/source/form.html
@@ -20,7 +20,7 @@
               </a>
             </li>
             <li class="site-list__item">
-              <a href="order.html">
+              <a href="form.html">
                 Вязание на заказ
               </a>
             </li>
