Стилизация Каталог выполнена

--- a/source/index.html
+++ b/source/index.html
@@ -77,8 +77,8 @@
       </section>
       <section class="product">
         <div class="product__wrapper">
-          <h2 class="product__title">Товар недели</h2>
-          <h3 class="product__name heading-secondary">Вязаные корзинки</h3>
+          <h2 class="product__name">Товар недели</h2>
+          <h3 class="product__title heading-secondary">Вязаные корзинки</h3>
           <div class="product__container">
             <p class="product__text">
               Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
