--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <img src="https://via.placeholder.com/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»">
       </a>
       <nav class="main-nav">
@@ -20,7 +20,7 @@
               </a>
             </li>
             <li class="site-list__item">
-              <a href="order.html">
+              <a href="form.html">
                 Вязание на заказ
               </a>
             </li>
@@ -59,58 +59,58 @@
         <h2 class="visually-hidden">Каталог товаров</h2>
         <div class="catalog__wrapper">
           <ul class="catalog__list">
-            <li class="product">
-              <a class="product__link-image" href="#">
-                <img class="product__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Зайчик-попрыгайчик">
+            <li class="card">
+              <a class="card__link-image" href="#">
+                <img class="card__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Зайчик-попрыгайчик">
               </a>
-              <div class="product__container">
-                <a class="product__link-title" href="#">
-                  <h3 class="product__title">
+              <div class="card__container">
+                <a class="card__link-title" href="#">
+                  <h3 class="card__title">
                     Зайчик-попрыгайчик
                   </h3>
                 </a>
-                <p class="product__description">Рост 30 см, вес 200 г</p>
-                <div class="product__container-price">
-                  <p class="product__price">1 200 руб.</p>
-                  <button class="product__button" type="button">
+                <p class="card__description">Рост 30 см, вес 200 г</p>
+                <div class="card__container-price">
+                  <p class="card__price">1 200 руб.</p>
+                  <button class="card__button" type="button">
                     <span class="visually-hidden">Добавить в корзину</span>
                   </button>
                 </div>
               </div>
             </li>
-            <li class="product">
-              <a class="product__link-image" href="#">
-                <img class="product__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Корзинка для белья">
+            <li class="card">
+              <a class="card__link-image" href="#">
+                <img class="card__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Корзинка для белья">
               </a>
-              <div class="product__container">
-                <a class="product__link-title" href="#">
-                  <h3 class="product__title">
+              <div class="card__container">
+                <a class="card__link-title" href="#">
+                  <h3 class="card__title">
                     Корзинка для белья
                   </h3>
                 </a>
-                <p class="product__description">Диаметр 15 см, высота 10 см</p>
-                <div class="product__container-price">
-                  <p class="product__price">690 руб.</p>
-                  <button class="product__button" type="button">
+                <p class="card__description">Диаметр 15 см, высота 10 см</p>
+                <div class="card__container-price">
+                  <p class="card__price">690 руб.</p>
+                  <button class="card__button" type="button">
                     <span class="visually-hidden">Добавить в корзину</span>
                   </button>
                 </div>
               </div>
             </li>
-            <li class="product">
-              <a class="product__link-image" href="#">
-                <img class="product__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Большая корзинка для игрушек">
+            <li class="card">
+              <a class="card__link-image" href="#">
+                <img class="card__picture" src="https://via.placeholder.com/260x195" width="260" height="195" alt="Большая корзинка для игрушек">
               </a>
-              <div class="product__container">
-                <a class="product__link-title" href="#">
-                  <h3 class="product__title">
+              <div class="card__container">
+                <a class="card__link-title" href="#">
+                  <h3 class="card__title">
                     Большая корзинка для игрушек
                   </h3>
                 </a>
-                <p class="product__description">Диаметр 30 см, высота 30 см</p>
-                <div class="product__container-price">
-                  <p class="product__price">1 500 руб.</p>
-                  <button class="product__button" type="button">
+                <p class="card__description">Диаметр 30 см, высота 30 см</p>
+                <div class="card__container-price">
+                  <p class="card__price">1 500 руб.</p>
+                  <button class="card__button" type="button">
                     <span class="visually-hidden">Добавить в корзину</span>
                   </button>
                 </div>
