--- a/source/index.html
+++ b/source/index.html
@@ -10,44 +10,57 @@
       <a class="page-header__logo">
         <img src="https://via.placeholder.com/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»">
       </a>
+      <button class="main-nav__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a href="catalog.html">
-                Каталог товаров
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a href="form.html">
-                Вязание на заказ
-              </a>
-            </li>
-          </ul>
-          <ul class="main-nav__list user-list">
-            <li class="user-list__item">
-              <a href="search.html">
-                <svg class="user-list__login-icon" width="18" height="18">
-                  <use xlink:href="img/sprite.svg#icon-search"></use>
-                </svg>
-                Поиск по сайту
-              </a>
-            </li>
-            <li class="user-list__item">
-              <a href="cart.html">
-                <svg class="user-list__login-icon" width="21" height="18">
-                  <use xlink:href="img/sprite.svg#icon-cart"></use>
-                </svg>
-                Корзина: пока пуста
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <p class="page-header__slogan visually-hidden">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="catalog.html">
+              Каталог товаров
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">
+              Вязание на заказ
+            </a>
+          </li>
+        </ul>
+        <ul class="main-nav__list user-list">
+          <li class="user-list__item">
+            <a href="search.html">
+              <svg class="user-list__login-icon" width="18" height="18">
+                <use xlink:href="img/sprite.svg#icon-search"></use>
+              </svg>
+              Поиск&nbsp;по&nbsp;сайту
+            </a>
+          </li>
+          <li class="user-list__item">
+            <a href="cart.html">
+              <svg class="user-list__login-icon" width="21" height="18">
+                <use xlink:href="img/sprite.svg#icon-cart"></use>
+              </svg>
+              Корзина:&nbsp;пока&nbsp;пуста
+            </a>
+          </li>
+        </ul>
+        <ul class="main-nav__list special-list">
+          <li class="site-list__item">
+            <a href="#">
+              Новые поступления
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">
+              Распродажа
+            </a>
+          </li>
+        </ul>
+      </div>
+      <p class="page-header__slogan">
         Бесплатная доставка по России
       </p>
+    </nav>
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Интернет-магазин «Мишка» — милые штуки ручной работы для дома</h1>
@@ -64,12 +77,12 @@
           <ul class="sections-nav__list">
             <li class="sections-nav__item sections-nav__item-left">
               <a href="interior.html">
-                Предметы интерьера
+                Предметы<br> интерьера
               </a>
             </li>
             <li class="sections-nav__item sections-nav__item-right">
               <a href="toys.html">
-                Детские игрушки
+                Детские<br> игрушки
               </a>
             </li>
           </ul>
@@ -77,8 +90,10 @@
       </section>
       <section class="product">
         <div class="product__wrapper">
-          <h2 class="product__name">Товар недели</h2>
-          <h3 class="product__title heading-secondary">Вязаные корзинки</h3>
+          <div class="product__name-container">
+            <h2 class="product__name">Товар<br> недели</h2>
+            <h3 class="product__title heading-secondary">Вязаные корзинки</h3>
+          </div>
           <div class="product__container">
             <p class="product__text">
               Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
