--- a/source/index.html
+++ b/source/index.html
@@ -90,10 +90,8 @@
       </section>
       <section class="product">
         <div class="product__wrapper">
-          <div class="product__name-container">
-            <h2 class="product__name">Товар<br> недели</h2>
-            <h3 class="product__title heading-secondary">Вязаные корзинки</h3>
-          </div>
+          <h2 class="product__name">Товар<br> недели</h2>
+          <h3 class="product__title heading-secondary">Вязаные корзинки</h3>
           <div class="product__container">
             <p class="product__text">
               Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
@@ -125,7 +123,7 @@
               </div>
             </dl>
           </div>
-          <img src="https://via.placeholder.com/260x315" width="260" height="315" alt="Вязаные корзинки">
+          <img class="product__image" src="https://via.placeholder.com/525x636" width="525" height="636" alt="Вязаные корзинки">
           <p class="product__price">
             Цена: 990 руб.
           </p>
@@ -176,7 +174,7 @@
                 @misssssiskras
               </a>
             </blockquote>
-            <blockquote class="reviews__item slider__item">
+            <blockquote class="reviews__item slider__item visually-hidden">
               <p class="reviews__item reviews__item--text">
                 Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
               </p>
@@ -199,9 +197,12 @@
       </section>
       <section class="contacts">
         <div class="contacts__wrapper">
-          <h2 class="contacts__title">
-            Контакты
-          </h2>
+          <div class="contacts__title-container">
+            <h2 class="contacts__title">
+              Контакты
+            </h2>
+            <div class="contacts__flag">Флаг</div>
+          </div>
           <address class="contacts__list">
             <div class="contacts__item">
               <p class="contacts__text address-text">
@@ -231,7 +232,7 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <img class="logo-footer visually-hidden" src="https://via.placeholder.com/102x34" width="102" height="34">
+        <img class="page-footer__logo" src="https://via.placeholder.com/102x34" width="102" height="34">
         <div class="page-footer__social social">
           <b class="social__title visually-hidden">Давайте дружить!</b>
           <ul class="social__list">
