Исправлено Сетки Главной

--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
   <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
-    <header class="page-header">
+    <header class="page-header container">
       <a class="page-header__logo">
         <img src="https://via.placeholder.com/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»">
       </a>
@@ -65,7 +66,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Интернет-магазин «Мишка» — милые штуки ручной работы для дома</h1>
       <section class="slogan">
-        <div class="slogan__wrapper">
+        <div class="slogan__wrapper container">
           <h2 class="slogan__title">
             Милые штуки<br> ручной<br> работы для дома
           </h2>
@@ -73,7 +74,7 @@
       </section>
       <section class="sections-nav">
         <h2 class="visually-hidden">Основные разделы</h2>
-        <div class="sections-nav__wrapper">
+        <div class="sections-nav__wrapper container">
           <ul class="sections-nav__list">
             <li class="sections-nav__item sections-nav__item-left">
               <a href="interior.html">
@@ -89,7 +90,7 @@
         </div>
       </section>
       <section class="product">
-        <div class="product__wrapper">
+        <div class="product__wrapper container">
           <h2 class="product__name">Товар<br> недели</h2>
           <h3 class="product__title heading-secondary">Вязаные корзинки</h3>
           <div class="product__container">
@@ -131,7 +132,7 @@
         </div>
       </section>
       <section class="advantages">
-        <div class="advantages__wrapper">
+        <div class="advantages__wrapper container">
           <h2 class="advantages__title heading-secondary">
             Коротко о нас:
           </h2>
@@ -158,7 +159,7 @@
         </div>
       </section>
       <section class="reviews">
-        <div class="reviews__wrapper slider">
+        <div class="reviews__wrapper container slider">
           <h2 class="reviews__title heading-secondary">
             Отзывы
           </h2>
@@ -231,7 +232,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
+      <div class="page-footer__wrapper container">
         <img class="page-footer__logo" src="https://via.placeholder.com/102x34" width="102" height="34">
         <div class="page-footer__social social">
           <b class="social__title visually-hidden">Давайте дружить!</b>
