--- a/source/index.html
+++ b/source/index.html
@@ -7,14 +7,16 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
-    <header class="page-header container">
+    <header class="page-header container-100">
       <a class="page-header__logo">
         <img src="https://via.placeholder.com/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»">
       </a>
-      <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
       <nav class="main-nav">
+        <div class="main-nav__special"></div>
+
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
             <a href="catalog.html">
@@ -61,6 +63,7 @@
       <p class="page-header__slogan">
         Бесплатная доставка по России
       </p>
+
     </nav>
     </header>
     <main class="page-main">
