Исправлено catalog__item

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -73,7 +73,7 @@
         <h2 class="visually-hidden">Каталог товаров</h2>
         <div class="catalog__wrapper container">
           <ul class="catalog__list">
-            <li class="card">
+            <li class="card catalog__item">
               <a class="card__link-image" href="#">
                 <img class="card__picture" src="https://via.placeholder.com/315x462" width="315" height="462" alt="Зайчик-попрыгайчик">
               </a>
@@ -94,7 +94,7 @@
                 </div>
               </div>
             </li>
-            <li class="card">
+            <li class="card catalog__item">
               <a class="card__link-image" href="#">
                 <img class="card__picture" src="https://via.placeholder.com/315x462" width="315" height="462" alt="Корзинка для белья">
               </a>
@@ -115,7 +115,7 @@
                 </div>
               </div>
             </li>
-            <li class="card">
+            <li class="card catalog__item">
               <a class="card__link-image" href="#">
                 <img class="card__picture" src="https://via.placeholder.com/315x462" width="315" height="462" alt="Большая корзинка для игрушек">
               </a>
