13. Доверстать главную страницу - исправлено змейки

--- a/source/index.html
+++ b/source/index.html
@@ -143,15 +143,15 @@
               </div>
             </dl>
           </div>
-
+          <!--MOBILE
           <img class="product__image" src="img/triple-set-mobile-1.jpg" width="260" height="315" alt="Вязаные корзинки">
-
+          -->
           <!--TABLET
           <img class="product__image" src="https://via.placeholder.com/334x404" width="334" height="404" alt="Вязаные корзинки">
           -->
-          <!--DESKTOP
+
           <img class="product__image" src="https://via.placeholder.com/525x636" width="525" height="636" alt="Вязаные корзинки">
-          -->
+
           <p class="product__price">
             Цена: 990 руб.
           </p>
