Убран блуждающий </div>, картинка на Главной

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -59,11 +59,10 @@
             </a>
           </li>
         </ul>
-      </div>
-      <p class="page-header__slogan">
-        Бесплатная доставка по России
-      </p>
-    </nav>
+        <p class="page-header__slogan">
+          Бесплатная доставка по России
+        </p>
+      </nav>
     </header>
     <main class="page-main">
       <div class="page-main__wrapper">
@@ -95,7 +94,7 @@
                 <div class="card__container-price">
                   <p class="card__price">1 200 руб.</p>
                   <button class="card__button" type="button">
-                    <img src="img/cart.svg">
+                    <img src="img/cart.svg" alt="">
                     <span class="visually-hidden">Добавить в корзину</span>
                   </button>
                 </div>
@@ -121,7 +120,7 @@
                 <div class="card__container-price">
                   <p class="card__price">690 руб.</p>
                   <button class="card__button" type="button">
-                    <img src="img/cart.svg">
+                    <img src="img/cart.svg" alt="">
                     <span class="visually-hidden">Добавить в корзину</span>
                   </button>
                 </div>
@@ -147,7 +146,7 @@
                 <div class="card__container-price">
                   <p class="card__price">1 500 руб.</p>
                   <button class="card__button" type="button">
-                    <img src="img/cart.svg">
+                    <img src="img/cart.svg" alt="">
                     <span class="visually-hidden">Добавить в корзину</span>
                   </button>
                 </div>
@@ -169,7 +168,7 @@
                 <img src="img/video-mobile@1x.jpg" alt="Процесс производства (видео)">
               </picture>
               <a class="video__play-button" href="#">
-                <img src="img/play.svg">
+                <img src="img/play.svg" alt="">
               </a>
             </div>
             <p class="video__text">
@@ -183,7 +182,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper container">
         <div class="page-footer__logo-container">
-          <img class="page-footer__logo" src="../img/logo-footer.svg" width="102" height="34">
+          <img class="page-footer__logo" src="../img/logo-footer.svg" width="102" height="34" alt="">
         </div>
         <div class="page-footer__social social">
           <b class="social__title visually-hidden">Давайте дружить!</b>
