Тени текстовых блоков

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -167,9 +167,10 @@
                 <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg">
                 <img src="img/video-mobile@1x.jpg" alt="Процесс производства (видео)">
               </picture>
-              <a class="video__play-button" href="#">
+              <button class="video__play-button" href="#">
+                <span class="visually-hidden">Смотреть видео</span>
                 <img src="img/play.svg" alt="">
-              </a>
+              </button>
             </div>
             <p class="video__text">
               По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
