18. Адаптивная графика для страницы каталога

--- a/source/form.html
+++ b/source/form.html
@@ -164,7 +164,7 @@
                 </legend>
                 <ul class="form__list">
                   <li class="form__item form__item--contacts">
-                    <label class="form__label form__label--contacts" for="user-telephone">Тел</label>
+                    <label class="form__label form__label--tel" for="user-telephone">Тел</label>
                     <div class="form__input-container form__input-container--phone">
                       <input class="form__input form__input--contacts" type="tel" id="user-telephone" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
                       <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -178,7 +178,7 @@
                     </div>
                   </li>
                   <li class="form__item form__item--contacts">
-                    <label class="form__label form__label--contacts" for="user-email">E-mail</label>
+                    <label class="form__label form__label--email" for="user-email">E-mail</label>
                     <div class="form__input-container form__input-container--email">
                       <input class="form__input form__input--contacts" type="email" id="user-email" name="user-email" placeholder="Ваш Email*">
                       <svg width="32" height="21" viewBox="0 0 32 21" fill="none" xmlns="http://www.w3.org/2000/svg">
