--- a/source/catalog.html
+++ b/source/catalog.html
@@ -81,9 +81,9 @@
             <li class="card catalog__item">
               <a class="card__link-image" href="#">
                 <picture>
-                  <source media="(min-width: 1150px)" srcset="/img/photo-1-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="/img/photo-1-tablet@1x.jpg">
-                  <img src="/img/photo-1-mobile@1x.jpg" alt="Зайчик-попрыгайчик">
+                  <source media="(min-width: 1150px)" srcset="img/photo-1-desktop@1x.jpg 1x, img/photo-1-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-1-tablet@1x.jpg 1x, img/photo-1-tablet@2x.jpg 2x">
+                  <img src="img/photo-1-mobile@1x.jpg" srcset="img/photo-1-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик">
                 </picture>
               </a>
               <div class="card__container">
@@ -107,9 +107,9 @@
             <li class="card catalog__item">
               <a class="card__link-image" href="#">
                 <picture>
-                  <source media="(min-width: 1150px)" srcset="/img/photo-2-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="/img/photo-2-tablet@1x.jpg">
-                  <img src="/img/photo-2-mobile@1x.jpg" alt="Корзинка для белья">
+                  <source media="(min-width: 1150px)" srcset="img/photo-2-desktop@1x.jpg 1x, img/photo-2-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-2-tablet@1x.jpg 1x, img/photo-2-tablet@2x.jpg 2x">
+                  <img src="img/photo-2-mobile@1x.jpg" srcset="img/photo-2-mobile@2x.jpg 2x" alt="Корзинка для белья">
                 </picture>
               </a>
               <div class="card__container">
@@ -133,9 +133,9 @@
             <li class="card catalog__item">
               <a class="card__link-image" href="#">
                 <picture>
-                  <source media="(min-width: 1150px)" srcset="/img/photo-3-desktop@1x.jpg">
-                  <source media="(min-width: 768px)" srcset="/img/photo-3-tablet@1x.jpg">
-                  <img src="/img/photo-3-mobile@1x.jpg" alt="Большая корзинка для игрушек">
+                  <source media="(min-width: 1150px)" srcset="img/photo-3-desktop@1x.jpg 1x, img/photo-3-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-3-tablet@1x.jpg 1x, img/photo-3-tablet@2x.jpg 2x">
+                  <img src="img/photo-3-mobile@1x.jpg" srcset="img/photo-3-mobile@2x.jpg 2x" alt="Большая корзинка для игрушек">
                 </picture>
               </a>
               <div class="card__container">
@@ -167,9 +167,9 @@
             </h2>
             <div class="video__container">
               <picture>
-                <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg">
-                <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg">
-                <img src="img/video-mobile@1x.jpg" alt="Процесс производства (видео)">
+                <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+                <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Процесс производства (видео)">
               </picture>
               <button class="video__play-button" href="#">
                 <span class="visually-hidden">Смотреть видео</span>
