--- a/source/catalog.html
+++ b/source/catalog.html
@@ -171,7 +171,7 @@
                 <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
                 <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Процесс производства (видео)">
               </picture>
-              <button class="video__play-button" href="#">
+              <button class="video__play-button">
                 <span class="visually-hidden">Смотреть видео</span>
                 <img src="img/play.svg" alt="">
               </button>
