Форма, исправление legend fieldset

--- a/source/index.html
+++ b/source/index.html
@@ -84,7 +84,7 @@
                 <p class="sections-nav__inner sections-nav__inner--interior">
                   Предметы<br> интерьера
                 </p>
-                <svg class="sections-nav__icon sections-nav__icon--interior" width="40" height="62" viewBox="0 0 40 62" xmlns="http://www.w3.org/2000/svg">
+                <svg class="sections-nav__icon sections-nav__icon--interior" width="40" height="62" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/svg/sprite.svg#icon-interior"></use>
                 </svg>
               </a>
@@ -94,7 +94,7 @@
                 <p class="sections-nav__inner sections-nav__inner--toy">
                   Детские<br> игрушки
                 </p>
-                <svg class="sections-nav__icon sections-nav__icon--toy" width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg">
+                <svg class="sections-nav__icon sections-nav__icon--toy" width="60" height="60" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/svg/sprite.svg#icon-toy"></use>
                 </svg>
               </a>
@@ -209,13 +209,13 @@
           </div>
           <div class="reviews__buttons-container">
             <button class="reviews__button reviews__button--left" type="button">
-              <svg width="50" height="26" viewBox="0 0 50 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg width="50" height="26" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <use xlink:href="img/svg/sprite.svg#button-left"></use>
               </svg>
               <span class="visually-hidden">предыдущий отзыв</span>
             </button>
             <button class="reviews__button reviews__button--right" type="button">
-              <svg width="50" height="26" viewBox="0 0 50 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg width="50" height="26" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <use xlink:href="img/svg/sprite.svg#button-right"></use>
               </svg>
               <span class="visually-hidden">следующий отзыв</span>
