убран класс с скрытых legend

--- a/source/form.html
+++ b/source/form.html
@@ -159,7 +159,7 @@
             </div>
             <div class="form__wrapper form__wrapper--contacts">
               <fieldset class="form__fieldset form__fieldset--contacts">
-                <legend class="form__legend visually-hidden">
+                <legend class="visually-hidden">
                   Контакты
                 </legend>
                 <ul class="form__list">
@@ -186,7 +186,7 @@
             </div>
             <div class="form__wrapper form__wrapper--more">
               <fieldset class="form__fieldset form__fieldset--more">
-                <legend class="form__legend visually-hidden">
+                <legend class="visually-hidden">
                   Ваши дополнения
                 </legend>
                 <label class="form__label form__label--more" for="user-text">Доп</label>
