PixelPerfect всех страниц, focus, исправление цветов в основном меню

--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
           </picture>
         </a>
       </div>
-      <nav class="main-nav main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--inner-page main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -85,7 +85,7 @@
       <section class="main-form">
         <h2 class="visually-hidden">Форма заказа</h2>
         <div class="main-form__wrapper container-100">
-          <form class="form" action="https://echo.htmlacademy.ru" method="post">
+          <form class="form" action="https://echo.htmlacademy.ru">
             <div class="form__wrapper form__wrapper--radio">
               <fieldset class="form__fieldset form__fieldset--radio">
                 <legend class="form__legend">
@@ -144,11 +144,11 @@
                 <ul class="form__list">
                   <li class="form__list-item">
                     <label class="form__label form__label--fio" for="fio-name">Имя:</label>
-                    <input class="form__input form__input--fio" id="fio-name" type="text" name="fio-name" placeholder="Введите ваше имя*">
+                    <input class="form__input form__input--fio" id="fio-name" required type="text" name="fio-name" placeholder="Введите ваше имя*">
                   </li>
                   <li class="form__list-item">
                     <label class="form__label form__label--fio" for="fio-surname">Фамилия:</label>
-                    <input class="form__input form__input--fio" id="fio-surname" type="text" name="fio-surname" placeholder="Укажите фамилию*">
+                    <input class="form__input form__input--fio" id="fio-surname" required type="text" name="fio-surname" placeholder="Укажите фамилию*">
                   </li>
                   <li class="form__list-item">
                     <label class="form__label form__label--fio" for="fio-patronymic">Отчество:</label>
@@ -166,7 +166,7 @@
                   <li class="form__item form__item--contacts">
                     <label class="form__label form__label--tel" for="user-telephone">Тел</label>
                     <div class="form__input-container form__input-container--phone">
-                      <input class="form__input form__input--contacts" type="tel" id="user-telephone" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+                      <input class="form__input form__input--contacts" type="tel" required pattern="\+7\s?\d{3}\s?\d{3}\s?\d{2}\s?\d{2}" id="user-telephone" name="user-telephone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
                       <svg width="25" height="24" xmlns="http://www.w3.org/2000/svg">
                         <use xlink:href="img/svg/sprite.svg#icon-phone"></use>
                       </svg>
@@ -175,7 +175,7 @@
                   <li class="form__item form__item--contacts">
                     <label class="form__label form__label--email" for="user-email">E-mail</label>
                     <div class="form__input-container form__input-container--email">
-                      <input class="form__input form__input--contacts" type="email" id="user-email" name="user-email" placeholder="Ваш Email*">
+                      <input class="form__input form__input--contacts" type="email" required id="user-email" name="user-email" placeholder="Ваш Email*">
                       <svg width="32" height="21" xmlns="http://www.w3.org/2000/svg">
                         <use xlink:href="img/svg/sprite.svg#icon-email"></use>
                       </svg>
@@ -197,7 +197,7 @@
               <p class="form__note">
                 *Поля обязательны для заполнения
               </p>
-              <button class="form__button button" type="button">
+              <button class="form__button button" type="submit">
                 отправить заказ
               </button>
             </div>
