--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
           </picture>
         </a>
       </div>
-      <nav class="main-nav main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--main-page main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -110,32 +110,20 @@
             <p class="product__text">
               Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
             </p>
-            <dl class="product__list">
-              <div class="product__item">
-                <dt class="product__number">
-                  Цвет:
-                </dt>
-                <dd class="product__description">
-                  «Тиффани»/серый
-                </dd>
-              </div>
-              <div class="product__item">
-                <dt class="product__number">
-                  Диаметр:
-                </dt>
-                <dd class="product__description">
-                  25 см
-                </dd>
-              </div>
-              <div class="product__item">
-                <dt class="product__number">
-                  Высота:
-                </dt>
-                <dd class="product__description">
-                  15 см
-                </dd>
-              </div>
-            </dl>
+            <table class="product__list">
+              <tr class="product__item">
+                <td class="product__number">Цвет:</td>
+                <td class="product__description">«Тиффани»/серый</td>
+              </tr>
+              <tr class="product__item">
+                <td class="product__number">Диаметр:</td>
+                <td class="product__description">25 см</td>
+              </tr>
+              <tr class="product__item">
+                <td class="product__number">Высота:</td>
+                <td class="product__description">15 см</td>
+              </tr>
+            </table>
           </div>
           <picture class="product__image">
             <source type="image/webp" media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
